--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="loginWindow" prefHeight="700" prefWidth="950" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hnust.controller.LoginController">
+<AnchorPane fx:id="loginWindow" prefHeight="700" prefWidth="950" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.hnust.controller.LoginController">
         <VBox alignment="CENTER" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
             <Label id="tea_register_font" fx:id="teaTitle" alignment="CENTER" text="教 师 登 录" textAlignment="CENTER" />
-            <GridPane id="login-container" fx:id="loginContainer" alignment="CENTER" hgap="10" managed="false" maxWidth="530" prefHeight="360.0" vgap="10" visible="false">
+            <GridPane id="login-container" fx:id="loginContainer" alignment="CENTER"  maxWidth="530" prefHeight="360.0" vgap="10" >
                 <Label alignment="TOP_LEFT" styleClass="label_text" text="账号：" GridPane.columnSpan="2" GridPane.rowIndex="0" />
                 <TextField fx:id="loginAccount" promptText="请输入账号" styleClass="form-ceil" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 
@@ -48,7 +48,7 @@
             <RowConstraints />
          </rowConstraints>
             </GridPane>
-            <GridPane id="login-container" fx:id="registerContainer" alignment="CENTER" hgap="20.0" minWidth="570" maxWidth="570" prefHeight="440.0" vgap="15.0">
+            <GridPane id="login-container" fx:id="registerContainer" alignment="CENTER" hgap="20.0" minWidth="570" maxWidth="570" managed="false" visible="false" prefHeight="440.0" vgap="15.0">
 
                 <Label alignment="TOP_LEFT" styleClass="label_text" text="姓名：" GridPane.columnSpan="2" GridPane.rowIndex="0" />
                 <TextField fx:id="registerName" promptText="请输入老师名字" styleClass="form-ceil" GridPane.columnSpan="2" GridPane.rowIndex="1" />
@@ -102,6 +102,4 @@
                 </rowConstraints>
             </GridPane>
         </VBox>
-
-
 </AnchorPane>
