--- a/src/main/resources/fxml/paper/generatePaperSecond.fxml
+++ b/src/main/resources/fxml/paper/generatePaperSecond.fxml
@@ -59,105 +59,7 @@
                     <AnchorPane fx:id="scp_paper_contain" style="-fx-background-color: #FFF">
                         <VBox  style="-fx-background-color: #FFF" spacing="15" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" fx:id="paper_contain">
                             <!--                        标题（选择题）-->
-                            <VBox spacing="10">
-                                <AnchorPane styleClass="paper_title" prefHeight="50">
-                                    <CheckBox AnchorPane.topAnchor="13" AnchorPane.leftAnchor="10"/>
-                                    <Label text="一、选择题" styleClass="paper_title_bg" AnchorPane.topAnchor="9" AnchorPane.leftAnchor="40"></Label>
-                                    <HBox spacing="10" AnchorPane.topAnchor="15" AnchorPane.rightAnchor="200">
-                                        <Label text="较易：" styleClass="paper_title_sm"></Label>
-                                        <Label text="0"></Label>
-                                        <Label text="中等："></Label>
-                                        <Label text="1"></Label>
-                                        <Label text="较难："></Label>
-                                        <Label text="1"></Label>
-                                    </HBox>
-                                    <Button styleClass="btn,btn-info,btn_appearance" text="添加题目" AnchorPane.topAnchor="5" AnchorPane.rightAnchor="5"></Button>
-                                </AnchorPane>
-                                <VBox>
-                                    <AnchorPane>
-                                        <CheckBox AnchorPane.topAnchor="15" AnchorPane.leftAnchor="10"/>
-                                        <Label text="1.这是一个选择题（）" AnchorPane.topAnchor="15" AnchorPane.leftAnchor="50" styleClass="question"></Label>
-                                        <Label text="A. 1  B. 2  C. 3  D. 4" AnchorPane.topAnchor="50" AnchorPane.leftAnchor="50" styleClass="question"></Label>
-                                        <HBox AnchorPane.rightAnchor="20" AnchorPane.topAnchor="10" alignment="CENTER" spacing="5">
-                                            <Label text="分值："></Label>
-                                            <Label text="3分"></Label>
-                                        </HBox>
-                                    </AnchorPane>
-                                    <VBox spacing="10">
-                                        <padding>
-                                            <Insets left="30" top="10"></Insets>
-                                        </padding>
-                                        <HBox>
-                                            <Label text="正确答案：" styleClass="question_answer"></Label>
-                                            <Label text="A" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目解析：" styleClass="question_answer"></Label>
-                                            <Label text="这是一段解析" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目知识点：" styleClass="question_answer"></Label>
-                                            <Label text="数据结构" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目章节：" styleClass="question_answer"></Label>
-                                            <Label text="1.2节" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目难度：" styleClass="question_answer"></Label>
-                                            <Label text="简单" styleClass="question_answer"></Label>
-                                        </HBox>
-                                    </VBox>
-                                </VBox>
-                                <AnchorPane styleClass="paper_title" prefHeight="50">
-                                    <CheckBox AnchorPane.topAnchor="13" AnchorPane.leftAnchor="10"/>
-                                    <Label text="二、简答题" styleClass="paper_title_bg" AnchorPane.topAnchor="9" AnchorPane.leftAnchor="40"></Label>
-                                    <HBox spacing="10" AnchorPane.topAnchor="15" AnchorPane.rightAnchor="200">
-                                        <Label text="较易：" styleClass="paper_title_sm"></Label>
-                                        <Label text="0"></Label>
-                                        <Label text="中等："></Label>
-                                        <Label text="1"></Label>
-                                        <Label text="较难："></Label>
-                                        <Label text="1"></Label>
-                                    </HBox>
-                                    <Button styleClass="btn,btn-info,btn_appearance" text="添加题目" AnchorPane.topAnchor="5" AnchorPane.rightAnchor="5"></Button>
-                                </AnchorPane>
-                                <VBox>
-                                    <AnchorPane>
-                                        <CheckBox AnchorPane.topAnchor="15" AnchorPane.leftAnchor="10"/>
-                                        <Label text="1.这是一个选择题（）" AnchorPane.topAnchor="15" AnchorPane.leftAnchor="50" styleClass="question"></Label>
-                                        <Label text="A. 1  B. 2  C. 3  D. 4" AnchorPane.topAnchor="50" AnchorPane.leftAnchor="50" styleClass="question"></Label>
-                                        <HBox AnchorPane.rightAnchor="20" AnchorPane.topAnchor="10" alignment="CENTER" spacing="5">
-                                            <Label text="分值："></Label>
-                                            <Label text="3分"></Label>
-                                        </HBox>
-                                    </AnchorPane>
-                                    <VBox spacing="10">
-                                        <padding>
-                                            <Insets left="30" top="10"></Insets>
-                                        </padding>
-                                        <HBox>
-                                            <Label text="正确答案：" styleClass="question_answer"></Label>
-                                            <Label text="A" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目解析：" styleClass="question_answer"></Label>
-                                            <Label text="这是一段解析" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目知识点：" styleClass="question_answer"></Label>
-                                            <Label text="数据结构" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目章节：" styleClass="question_answer"></Label>
-                                            <Label text="1.2节" styleClass="question_answer"></Label>
-                                        </HBox>
-                                        <HBox>
-                                            <Label text="题目难度：" styleClass="question_answer"></Label>
-                                            <Label text="简单" styleClass="question_answer"></Label>
-                                        </HBox>
-                                    </VBox>
-                                </VBox>
+                            <VBox spacing="10" fx:id="paper_contain_list">
                             </VBox>
                         </VBox>
                     </AnchorPane>
